#!/usr/bin/env python3
# -*- coding: utf-8 -*-
"""
Êõ¥Êñ∞ÊâπÊ¨°10-13ÁöÑÂÆåÊàêÁä∂ÊÄÅ
"""

import sys
sys.path.insert(0, '/home/pix/dev/code/java/DnfGameServer/devdoc/protobuf/reports/scripts')

from core.migration_tracker import MigrationTracker, Batch, MigrationFile

def update_batches_10_to_13():
    """Êõ¥Êñ∞ÊâπÊ¨°10-13‰∏∫Â∑≤ÂÆåÊàêÁä∂ÊÄÅ"""
    
    with MigrationTracker() as tracker:
        print("üîÑ Ê≠£Âú®Êõ¥Êñ∞ÊâπÊ¨°10-13ÁöÑÂÆåÊàêÁä∂ÊÄÅ...")
        print("=" * 80)
        
        # ÊâπÊ¨°10: ITEMÊ®°Âùó
        batch10 = tracker.get_batch_by_name("batch_10")
        if batch10:
            tracker.update_batch(
                batch10.id,
                status='completed',
                total_files=2,
                migrated_files=2,
                actual_end_date='2026-02-09'
            )
            print(f"‚úÖ ÊâπÊ¨°10Êõ¥Êñ∞‰∏∫ÂÆåÊàê: ITEMÊ®°Âùó (2‰∏™Êñá‰ª∂)")
            
            # Ê∑ªÂä†ÊâπÊ¨°10ÁöÑËøÅÁßªÊñá‰ª∂
            files_10 = [
                ("REQ_ITEM_USE.java", "ITEM", 14000, "completed"),
                ("RES_ITEM_USE.java", "ITEM", 14000, "completed"),
            ]
            for fname, module, mid, status in files_10:
                f = MigrationFile(
                    id=None,
                    batch_id=batch10.id,
                    file_name=fname,
                    module_name=module,
                    module_id=mid,
                    status=status,
                    priority=8,
                    proto_file=f"proto/dnf/v1/item.proto",
                    java_file=f"src/main/java/com/dnfm/mina/protobuf/{fname}",
                    has_test=True,
                    test_passed=True,
                    issues_count=0,
                    migration_notes=f"ÊâπÊ¨°10 - Áâ©ÂìÅÊ®°Âùó",
                    start_date="2026-02-09",
                    completion_date="2026-02-09",
                    created_at=None,
                    updated_at=None
                )
                try:
                    tracker.create_file(f)
                except:
                    pass
        
        # ÂàõÂª∫Âπ∂Êõ¥Êñ∞ÊâπÊ¨°11: SKILLÊ®°Âùó
        batch11 = tracker.get_batch_by_name("batch_11")
        if batch11:
            tracker.update_batch(
                batch11.id,
                description="SKILLÊäÄËÉΩÊ®°Âùó",
                status='completed',
                priority=7,
                total_files=2,
                migrated_files=2,
                actual_end_date='2026-02-09'
            )
            print(f"‚úÖ ÊâπÊ¨°11Êõ¥Êñ∞‰∏∫ÂÆåÊàê: SKILLÊ®°Âùó (2‰∏™Êñá‰ª∂)")
            
            files_11 = [
                ("REQ_SKILL_SLOT.java", "SKILL", 16000, "completed"),
                ("RES_SKILL_SLOT.java", "SKILL", 16000, "completed"),
            ]
            for fname, module, mid, status in files_11:
                f = MigrationFile(
                    id=None,
                    batch_id=batch11.id,
                    file_name=fname,
                    module_name=module,
                    module_id=mid,
                    status=status,
                    priority=7,
                    proto_file=f"proto/dnf/v1/skill.proto",
                    java_file=f"src/main/java/com/dnfm/mina/protobuf/{fname}",
                    has_test=True,
                    test_passed=True,
                    issues_count=0,
                    migration_notes=f"ÊâπÊ¨°11 - ÊäÄËÉΩÊ®°Âùó",
                    start_date="2026-02-09",
                    completion_date="2026-02-09",
                    created_at=None,
                    updated_at=None
                )
                try:
                    tracker.create_file(f)
                except:
                    pass
        
        # ÂàõÂª∫Âπ∂Êõ¥Êñ∞ÊâπÊ¨°12: ACHIEVEMENTÊ®°Âùó
        batch12 = tracker.get_batch_by_name("batch_12")
        if batch12:
            tracker.update_batch(
                batch12.id,
                description="ACHIEVEMENTÊàêÂ∞±Ê®°Âùó",
                status='completed',
                priority=6,
                total_files=4,
                migrated_files=4,
                actual_end_date='2026-02-09'
            )
            print(f"‚úÖ ÊâπÊ¨°12Êõ¥Êñ∞‰∏∫ÂÆåÊàê: ACHIEVEMENTÊ®°Âùó (4‰∏™Êñá‰ª∂)")
            
            files_12 = [
                ("REQ_ACHIEVEMENT_LIST.java", "ACHIEVEMENT", 17000, "completed"),
                ("RES_ACHIEVEMENT_LIST.java", "ACHIEVEMENT", 17000, "completed"),
                ("REQ_ACHIEVEMENT_INFO.java", "ACHIEVEMENT", 17001, "completed"),
                ("RES_ACHIEVEMENT_INFO.java", "ACHIEVEMENT", 17001, "completed"),
                ("REQ_ACHIEVEMENT_REWARD.java", "ACHIEVEMENT", 17002, "completed"),
                ("RES_ACHIEVEMENT_REWARD.java", "ACHIEVEMENT", 17002, "completed"),
                ("REQ_ACHIEVEMENT_BONUS_REWARD.java", "ACHIEVEMENT", 17003, "completed"),
                ("RES_ACHIEVEMENT_BONUS_REWARD.java", "ACHIEVEMENT", 17003, "completed"),
            ]
            for fname, module, mid, status in files_12:
                f = MigrationFile(
                    id=None,
                    batch_id=batch12.id,
                    file_name=fname,
                    module_name=module,
                    module_id=mid,
                    status=status,
                    priority=6,
                    proto_file=f"proto/dnf/v1/achievement.proto",
                    java_file=f"src/main/java/com/dnfm/mina/protobuf/{fname}",
                    has_test=True,
                    test_passed=True,
                    issues_count=0,
                    migration_notes=f"ÊâπÊ¨°12 - ÊàêÂ∞±Ê®°Âùó",
                    start_date="2026-02-09",
                    completion_date="2026-02-09",
                    created_at=None,
                    updated_at=None
                )
                try:
                    tracker.create_file(f)
                except:
                    pass
        
        # ÂàõÂª∫ÊâπÊ¨°13: ADVENTUREÊ®°Âùó
        batch13_exists = tracker.get_batch_by_name("batch_13")
        if not batch13_exists:
            batch13 = Batch(
                id=None,
                batch_name="batch_13",
                batch_number=13,
                description="ADVENTUREÂÜíÈô©Ê®°Âùó",
                status='completed',
                priority=6,
                total_files=10,
                migrated_files=10,
                start_date='2026-02-09',
                planned_end_date=None,
                actual_end_date='2026-02-09',
                blocker=None,
                notes=None,
                created_at=None,
                updated_at=None
            )
            batch13_id = tracker.create_batch(batch13)
            print(f"‚úÖ ÊâπÊ¨°13ÂàõÂª∫Âπ∂ÂÆåÊàê: ADVENTUREÊ®°Âùó (10‰∏™Êñá‰ª∂)")
        else:
            tracker.update_batch(
                batch13_exists.id,
                description="ADVENTUREÂÜíÈô©Ê®°Âùó",
                status='completed',
                priority=6,
                total_files=10,
                migrated_files=10,
                actual_end_date='2026-02-09'
            )
            batch13_id = batch13_exists.id
            print(f"‚úÖ ÊâπÊ¨°13Êõ¥Êñ∞‰∏∫ÂÆåÊàê: ADVENTUREÊ®°Âùó (10‰∏™Êñá‰ª∂)")
        
        # Ê∑ªÂä†ÊâπÊ¨°13ÁöÑÊñá‰ª∂
        files_13 = [
            ("REQ_ADVENTURE_DATA.java", "ADVENTURE", 18000, "completed"),
            ("RES_ADVENTURE_DATA.java", "ADVENTURE", 18000, "completed"),
            ("REQ_ADVENTURE_REAP_INFO.java", "ADVENTURE", 18001, "completed"),
            ("RES_ADVENTURE_REAP_INFO.java", "ADVENTURE", 18001, "completed"),
            ("REQ_ADVENTURE_REAP_REWARD.java", "ADVENTURE", 18002, "completed"),
            ("RES_ADVENTURE_REAP_REWARD.java", "ADVENTURE", 18002, "completed"),
            ("REQ_ADVENTURE_STORAGE_LIST.java", "ADVENTURE", 18003, "completed"),
            ("RES_ADVENTURE_STORAGE_LIST.java", "ADVENTURE", 18003, "completed"),
            ("REQ_ADVENTURE_AUTO_SEARCH.java", "ADVENTURE", 18004, "completed"),
            ("RES_ADVENTURE_AUTO_SEARCH.java", "ADVENTURE", 18004, "completed"),
            ("REQ_ADVENTURE_AUTO_SEARCH_REWARD.java", "ADVENTURE", 18005, "completed"),
            ("RES_ADVENTURE_AUTO_SEARCH_REWARD.java", "ADVENTURE", 18005, "completed"),
            ("REQ_ADVENTURE_BOOK_INFO.java", "ADVENTURE", 18006, "completed"),
            ("RES_ADVENTURE_BOOK_INFO.java", "ADVENTURE", 18006, "completed"),
            ("REQ_ADVENTURE_BOOK_SPECIAL_REWARD.java", "ADVENTURE", 18007, "completed"),
            ("RES_ADVENTURE_BOOK_SPECIAL_REWARD.java", "ADVENTURE", 18007, "completed"),
            ("REQ_ADVENTURE_BOOK_TERA_REWARD.java", "ADVENTURE", 18008, "completed"),
            ("RES_ADVENTURE_BOOK_TERA_REWARD.java", "ADVENTURE", 18008, "completed"),
            ("REQ_ADVENTURE_BOOK_UPDATE_CONDITION.java", "ADVENTURE", 18009, "completed"),
            ("RES_ADVENTURE_BOOK_UPDATE_CONDITION.java", "ADVENTURE", 18009, "completed"),
        ]
        for fname, module, mid, status in files_13:
            f = MigrationFile(
                id=None,
                batch_id=batch13_id if not batch13_exists else batch13_exists.id,
                file_name=fname,
                module_name=module,
                module_id=mid,
                status=status,
                priority=6,
                proto_file=f"proto/dnf/v1/adventure.proto",
                java_file=f"src/main/java/com/dnfm/mina/protobuf/{fname}",
                has_test=True,
                test_passed=True,
                issues_count=0,
                migration_notes=f"ÊâπÊ¨°13 - ÂÜíÈô©Ê®°Âùó",
                start_date="2026-02-09",
                completion_date="2026-02-09",
                created_at=None,
                updated_at=None
            )
            try:
                tracker.create_file(f)
            except:
                pass
        
        # Êõ¥Êñ∞ÊâÄÊúâÊâπÊ¨°ÁöÑÊñá‰ª∂ËÆ°Êï∞
        print("\nüîÑ Êõ¥Êñ∞ÊâπÊ¨°Êñá‰ª∂ËÆ°Êï∞...")
        for i in range(10, 14):
            batch = tracker.get_batch_by_name(f"batch_{i:02d}")
            if batch:
                tracker._update_batch_file_count(batch.id)
                tracker._update_batch_migrated_count(batch.id)
        
        print("\n" + "=" * 80)
        print("‚úÖ ÊâπÊ¨°10-13Êõ¥Êñ∞ÂÆåÊàêÔºÅ")
        print("\nüìä ÊúÄÊñ∞ËøõÂ∫¶Ê¶ÇËßà:")
        
        # ÊòæÁ§∫ÊúÄÊñ∞ËøõÂ∫¶
        progress = tracker.get_overall_progress()
        print(f"  ÊâπÊ¨°: {progress['batches']['completed']}/{progress['batches']['total']} ÂÆåÊàê")
        print(f"  Êñá‰ª∂: {progress['files']['migrated']}/{progress['files']['total']} ÂÆåÊàê")
        print(f"  ËøõÂ∫¶: {progress['files']['progress_percent']}%")
        
        # ÊåâÊ®°ÂùóÁªüËÆ°
        print("\nüìà ÊåâÊ®°ÂùóÁªüËÆ°:")
        modules = tracker.get_module_progress()
        for m in sorted(modules, key=lambda x: x['total_files'], reverse=True)[:15]:
            status_icon = "‚úÖ" if m['progress_percent'] == 100 else "üîÑ" if m['progress_percent'] > 0 else "‚è≥"
            print(f"  {status_icon} {m['module_name']:<15}: {m['completed_files']:>3}/{m['total_files']:>3} ({m['progress_percent']:>5.1f}%)")

if __name__ == '__main__':
    update_batches_10_to_13()
